4. Made the Guide ID not case sensitive. 
5. Updated Replay function to be a control function with 3 sub functions.

2014-05-08:
1. Updated CSS to have definitions for buttons. 
2. Added Commented Definiations for Button variables. 

2014-05-11:
1. Added CSS functionality for buttons.
2. Added makediv functionality for making buttons and added variables to hold div referance.
3. Created a Template for XML files.
4. Created a Demo Guide with images.

2014-05-19:
1. Added all variables to handle current planned additions.

2014-05-20:
1. Added New Error handler function.
2. Removed outdatded un-used variables.
3. Updated folder structor for storing XML.
5. Added Error XML file.
6. Test Error Function works for Defult condition and with XML error.

2014-05-21:
1. Updated XML Templates to add Config file and Guide list. And added more commenting to file.
2. Added Variables to hold XML locations.
3. Created a COnfiguration XML file.
4. UPdated Error function to correct handle cases where an error is thrown but is not found in the XML.

2014-05-22:
1. Created added and tested the a function to parse config file and log XML based on its Locations.
2. creadted and test config file
3. Updated Error hander to better handle unknown errors.
4.BUG: error handler is currently not working with debug mode. Currently Errors only alert.

2014-05-23:
1. Moved all existing error messages to the Error messages file with new error codes.
2. Updated Comments for Remove Function to better explain its functinoality.
3. Updated Guide variables comments to section off Replay Code Variables. 
4. Added a Section in Guide variables for Content Engine Variables and added variables for context engine. 
5. Updated Guide Object to take config file path as a Main args in. 
6. Updated Activate Guide function to add if statements to Load Context engine variables if they are entered as strings in the pramiters of the function.
7. Test Updated activate Guide function in and it Passed.