@@ -38,7 +38,7 @@
 	
 </div>
 	</div>
-    <div class="guide_area" id="guide_area">
-	</div>
+    <div class="guide_area" id="guide_area"></div>
+	
 </body>
 </html>
